--- a/templates/views/user_maintenance.html
+++ b/templates/views/user_maintenance.html
@@ -117,6 +117,7 @@
   );
 
   function search(page) {
+    console.log(page);
     let url = window.location.href.split('?')[0];
     let search = $('#search').val();
     url += `?page=${page}`;
