--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -39,8 +39,16 @@
           <a href="/user-maintenance" class="nav-link">
             <i class="nav-icon fas fa-user"></i>
             <p>
-              Users
-              <span class="right badge badge-danger">New</span>
+              User Maintenance
+              <!-- <span class="right badge badge-danger">New</span> -->
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/user-online" class="nav-link">
+            <i class="nav-icon far fa-circle text-success"></i>
+            <p>
+              User Online
             </p>
           </a>
         </li>
