--- a/templates/views/user_maintenance_edit.html
+++ b/templates/views/user_maintenance_edit.html
@@ -6,7 +6,7 @@
         <input 
           type="hidden" 
           class="form-control" 
-          name="id" 
+          name="_id" 
           value="{{if user}}{{user._id.toString()}}{{/if}}" 
         />
       </div>
@@ -14,19 +14,29 @@
         <label>First Name</label>
         <input 
           type="text" 
-          class="form-control" 
+          class="form-control {{if errors}}{{if errors.first_name}}is-invalid{{/if}}{{/if}}" 
           name="first_name" 
           value="{{if user}}{{user.first_name}}{{/if}}" 
         />
+        {{if errors}}
+          {{if errors.first_name}}
+            <small class="form-text text-danger">{{errors.first_name}}</small>
+          {{/if}}
+        {{/if}}
       </div>
       <div class="form-group">
         <label>Last Name</label>
         <input 
           type="text" 
-          class="form-control" 
+          class="form-control {{if errors}}{{if errors.last_name}}is-invalid{{/if}}{{/if}}" 
           name="last_name" 
           value="{{if user}}{{user.last_name}}{{/if}}" 
         />
+        {{if errors}}
+          {{if errors.last_name}}
+            <small class="form-text text-danger">{{errors.last_name}}</small>
+          {{/if}}
+        {{/if}}
       </div>
       <div class="form-group">
         <label>Phone Number</label>
@@ -41,34 +51,49 @@
         <label>Email</label>
         <input 
           type="email" 
-          class="form-control" 
+          class="form-control {{if errors}}{{if errors.email}}is-invalid{{/if}}{{/if}}" 
           name="email" 
           value="{{if user}}{{user.email}}{{/if}}" 
         />
+        {{if errors}}
+          {{if errors.email}}
+            <small class="form-text text-danger">{{errors.email}}</small>
+          {{/if}}
+        {{/if}}
       </div>
       <div class="form-group">
         <label>Password</label>
         <input 
           type="password" 
-          class="form-control" 
+          class="form-control {{if errors}}{{if errors.password}}is-invalid{{/if}}{{/if}}" 
           name="password" 
           value="{{if user}}{{user.password}}{{/if}}"
         />
+        {{if errors}}
+          {{if errors.password}}
+            <small class="form-text text-danger">{{errors.password}}</small>
+          {{/if}}
+        {{/if}}
       </div>
       <div class="form-group">
         <label>User Type</label>
-        <select class="form-control" name="type">
-          {{each USER_TYPES}}
+        <select class="form-control {{if errors}}{{if errors.type}}is-invalid{{/if}}{{/if}}" name="type">
+          {{each USER_TYPE}}
           <option 
             value="{{$value}}"
             {{if user}}{{if user.type == $value}}selected{{/if}}{{/if}}
           >{{$value}}</option>
           {{/each}}
         </select>
+        {{if errors}}
+          {{if errors.first_name}}
+            <small class="form-text text-danger">{{errors.type}}</small>
+          {{/if}}
+        {{/if}}
       </div>
       <div class="form-group">
         <label>User Status</label>
-        <select class="form-control" name="status">
+        <select class="form-control {{if errors}}{{if errors.status}}is-invalid{{/if}}{{/if}}" name="status">
           {{each USER_STATUS}}
           <option 
             value="{{$value}}"
@@ -76,6 +101,11 @@
           >{{$value}}</option>
           {{/each}}
         </select>
+        {{if errors}}
+          {{if errors.status}}
+            <small class="form-text text-danger">{{errors.status}}</small>
+          {{/if}}
+        {{/if}}
       </div>
     </div>
     <div class="card-footer">
