--- a/templates/views/lead_management.html
+++ b/templates/views/lead_management.html
@@ -52,10 +52,44 @@
     </div>
   </div>
   <div class="col-md-9">
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          {{each lead_batch.docs}}
+
+
+  <!--made by button to remove one search-->
+  <div class="card card-primary card-outline card-outline-tabs">
+    <div class="card-header p-0 border-bottom-0">
+      <div class="btn-group w-100 mb-2">
+        <a class="btn btn-primary {{if type == 'lead'}}active{{/if}}" href="/lead-management?page=1&type=lead"> Leads </a>
+        <a class="btn btn-primary {{if type == 'batch'}}active{{/if}}" href="/lead-management?page=1&type=batch"> Lead Batches </a>
+      </div>
+    </div>
+    
+    <div class="card-body">
+      <div class="row">
+        {{if type == 'lead'}}
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Job Title</th>
+                <th>Company</th>
+                <th>Mobile</th>
+              </tr>
+            </thead>
+            <tbody>
+              {{each list.docs}}
+              <tr>
+                <td>{{$value.first_name}}</td>
+                <td>{{$value.last_name}}</td>
+                <td>{{$value.job_title}}</td>
+                <td>{{$value.company}}</td>
+                <td>{{$value.mobile}}</td>
+              </tr>
+              {{/each}}
+            </tbody>
+          </table>
+        {{else}}
+          {{each list.docs}}
             <div class="col-md-4 p-2 pl-3 pr-3">
               <!-- Widget: user widget style 2 -->
               <div class="card card-widget widget-user-2 shadow">
@@ -85,26 +119,31 @@
               </div>
             </div>
           {{/each}}
-        </div>
-      </div>
-      <div class="card-footer">
-        <nav aria-label="Contacts Page Navigation">
-          <ul
-            class="pagination justify-content-center m-0"
-            id="pagination"
-          ></ul>
-        </nav>
+        {{/if}}
       </div>
     </div>
+
+    <div class="card-footer">
+      <nav aria-label="Contacts Page Navigation">
+        <ul
+          class="pagination justify-content-center m-0"
+          id="pagination"
+        ></ul>
+      </nav>
+    </div>
+
+  </div>
+
+
   </div>
 </div>
 {{/block}} {{block 'javascript'}}
 <script src="/app/global.js"></script>
 <script src="/assets/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
 <script>
-  const page = parseInt('{{lead_batch.page}}');
-  const totalPages = parseInt('{{lead_batch.totalPages}}');
-  const totalDocs = parseInt('{{lead_batch.totalDocs}}');
+  const page = parseInt('{{list.page}}');
+  const totalPages = parseInt('{{list.totalPages}}');
+  const totalDocs = parseInt('{{list.totalDocs}}');
   document.getElementById('search').value = decodeHTML(
     '{{search | escapeBackslash}}'
   );
@@ -113,7 +152,7 @@
     console.log(page);
     let url = window.location.href.split('?')[0];
     let search = $('#search').val();
-    url += `?page=${page}`;
+    url += `?page=${page}&type={{type}}`;
     if (search) url += `&search=${search}`;
     window.location.href = url;
   }
