--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -5,7 +5,7 @@
       src="/assets/dist/img/AdminLTELogo.png"
       alt="AdminLTE Logo"
       class="brand-image img-circle elevation-3"
-      style="opacity: 0.8;"
+      style="opacity: 0.8"
     />
     <span class="brand-text font-weight-light">CBI App</span>
   </a>
@@ -35,29 +35,7 @@
       >
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
-
-        {{if AUTH.access.includes('user_maintenance')}}
-        <li class="nav-item">
-          <a
-            href="/user-maintenance"
-            class="nav-link {{navigation | activeNav 'user_maintenance'}}"
-          >
-            <i class="nav-icon fas fa-user"></i>
-            <p>
-              User Maintenance
-              <!-- <span class="right badge badge-danger">New</span> -->
-            </p>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="/user-online" class="nav-link">
-            <i class="nav-icon far fa-circle text-success"></i>
-            <p>
-              User Online
-            </p>
-          </a>
-        </li>
-        {{/if}} {{if AUTH.access.includes('upload_leads')}}
+        {{if AUTH.access.includes('upload_leads')}}
         <li class="nav-item">
           <a
             href="/upload-leads"
@@ -70,7 +48,26 @@
             </p>
           </a>
         </li>
+        {{/if}} {{if AUTH.access.includes('user_maintenance')}}
+        <li class="nav-item">
+          <a
+            href="/user-maintenance"
+            class="nav-link {{navigation | activeNav 'user_maintenance'}}"
+          >
+            <i class="nav-icon fas fa-user"></i>
+            <p>
+              User Maintenance
+              <!-- <span class="right badge badge-danger">New</span> -->
+            </p>
+          </a>
+        </li>
         {{/if}}
+        <li class="nav-item">
+          <a href="/user-online" class="nav-link">
+            <i class="nav-icon far fa-circle text-success"></i>
+            <p>User Online</p>
+          </a>
+        </li>
         <li class="nav-item">
           <a href="/logout" class="nav-link">
             <i class="nav-icon fas fa-sign-out-alt"></i>
