--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -35,48 +35,28 @@
       >
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
-        {{if AUTH.access.includes('upload_leads')}}
+        {{if AUTH.access.includes('lead_management')}}
         <li class="nav-item">
           <a
-            href="/upload-leads"
-            class="nav-link {{navigation | activeNav 'upload_leads'}}"
+            href="/lead-management"
+            class="nav-link {{navigation | activeNav 'lead_management'}}"
           >
             <i class="nav-icon fas fa-folder-open"></i>
             <p>
-              Upload Leads
+              Lead Management
               <!-- <span class="right badge badge-danger">New</span> -->
             </p>
           </a>
         </li>
-<<<<<<< HEAD
         {{/if}} {{if AUTH.access.includes('user_maintenance')}}
         <li class="nav-item">
           <a
             href="/user-maintenance"
             class="nav-link {{navigation | activeNav 'user_maintenance'}}"
-=======
-        <li class="nav-item">
-          <a href="/user-online" class="nav-link">
-            <i class="nav-icon far fa-circle text-success"></i>
-            <p>
-              User Online
-            </p>
-          </a>
-        </li>
-        {{/if}} {{if AUTH.access.includes('lead_management')}}
-        <li class="nav-item">
-          <a
-            href="/lead-management"
-            class="nav-link {{navigation | activeNav 'lead_management'}}"
->>>>>>> 6d076e6e57aad70c0bf9a3d3424a3073a23d9a42
           >
             <i class="nav-icon fas fa-user"></i>
             <p>
-<<<<<<< HEAD
               User Maintenance
-=======
-              Lead Management
->>>>>>> 6d076e6e57aad70c0bf9a3d3424a3073a23d9a42
               <!-- <span class="right badge badge-danger">New</span> -->
             </p>
           </a>
