--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -10,10 +10,10 @@
 <!-- Font Awesome -->
 <link rel="stylesheet" href="/assets/plugins/fontawesome-free/css/all.min.css" />
 <!-- Ionicons -->
-<link
+<!-- <link
   rel="stylesheet"
   href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-/>
+/> -->
 <!-- Tempusdominus Bootstrap 4 -->
 <link
   rel="stylesheet"
