--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -8,10 +8,40 @@
           <input
             type="search"
             class="form-control"
-            id="search"
-            placeholder="Setting name, BDM, IFA"
+            id="name"
+            placeholder="Name"
             onsearch="search(1);"
           />
+        </div>
+        <div class="form-group">
+          <select
+            class="form-control select2bs4"
+            id="ifa"
+            onchange="search(1)"
+            style="width: 100%"
+          >
+            <option value="">Select IFA</option>
+            {{each IFA}}
+            <option value="{{$value.first_name}} {{$value.last_name}}">
+              {{$value.first_name}} {{$value.last_name}}
+            </option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="form-group">
+          <select
+            class="form-control select2bs4"
+            id="bdm"
+            onchange="search(1)"
+            style="width: 100%"
+          >
+            <option value="">Select BDM</option>
+            {{each BDM}}
+            <option value="{{$value.first_name}} {{$value.last_name}}">
+              {{$value.first_name}} {{$value.last_name}}
+            </option>
+            {{/each}}
+          </select>
         </div>
       </div>
     </div>
@@ -48,7 +78,9 @@
               <td>{{$value.bdm_name| titleCase}}</td>
               <td>{{$value.status | titleCase}}</td>
               <td>
-                <a href="/bdm-settings/edit/{{$value._id.toString()}}" class="btn bg-info"
+                <a
+                  href="/bdm-settings/edit/{{$value._id.toString()}}"
+                  class="btn bg-info"
                   >Edit</a
                 >
               </td>
@@ -74,20 +106,32 @@
   const page = parseInt('{{settings.page}}');
   const totalPages = parseInt('{{settings.totalPages}}');
   const totalDocs = parseInt('{{settings.totalDocs}}');
-  document.getElementById('search').value = decodeHTML(
-    '{{search | escapeBackslash}}'
+  document.getElementById('name').value = decodeHTML(
+    '{{search.name | escapeBackslash}}'
+  );
+  document.getElementById('ifa').value = decodeHTML(
+    '{{search.ifa | escapeBackslash}}'
+  );
+  document.getElementById('bdm').value = decodeHTML(
+    '{{search.bdm | escapeBackslash}}'
   );
 
   function search(page) {
-    console.log(page);
     let url = window.location.href.split('?')[0];
-    let search = $('#search').val();
+    let name = $('#name').val();
+    let ifa = $('#ifa').val();
+    let bdm = $('#bdm').val();
     url += `?page=${page}`;
-    if (search) url += `&search=${search}`;
+    if (name) url += `&name=${name}`;
+    if (ifa) url += `&ifa=${ifa}`;
+    if (bdm) url += `&bdm=${bdm}`;
     window.location.href = url;
   }
 
   $(document).ready(function () {
+    $('.select2bs4').select2({
+      theme: 'bootstrap4',
+    });
     $('#pagination').html(pagination(page, totalPages, totalDocs, 'search'));
   });
 </script>
