--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -8,7 +8,10 @@
   href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
 />
 <!-- Font Awesome -->
-<link rel="stylesheet" href="/assets/plugins/fontawesome-free/css/all.min.css" />
+<link
+  rel="stylesheet"
+  href="/assets/plugins/fontawesome-free/css/all.min.css"
+/>
 <!-- Ionicons -->
 <!-- <link
   rel="stylesheet"
@@ -18,6 +21,12 @@
 <link
   rel="stylesheet"
   href="/assets/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+/>
+<!-- Select2 -->
+<link rel="stylesheet" href="/assets/plugins/select2/css/select2.min.css">
+<link
+  rel="stylesheet"
+  href="/assets/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"
 />
 <!-- iCheck -->
 <link
@@ -34,6 +43,12 @@
   href="/assets/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
 />
 <!-- Daterange picker -->
-<link rel="stylesheet" href="/assets/plugins/daterangepicker/daterangepicker.css" />
+<link
+  rel="stylesheet"
+  href="/assets/plugins/daterangepicker/daterangepicker.css"
+/>
 <!-- summernote -->
-<link rel="stylesheet" href="/assets/plugins/summernote/summernote-bs4.min.css" />
+<link
+  rel="stylesheet"
+  href="/assets/plugins/summernote/summernote-bs4.min.css"
+/>
