--- a/templates/views/partials/scripts.html
+++ b/templates/views/partials/scripts.html
@@ -8,6 +8,8 @@
 </script>
 <!-- Bootstrap 4 -->
 <script src="/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Select2 -->
+<script src="/assets/plugins/select2/js/select2.full.min.js"></script>
 <!-- ChartJS -->
 <script src="/assets/plugins/chart.js/Chart.min.js"></script>
 <!-- Sparkline -->
