--- a/templates/views/user_maintenance.html
+++ b/templates/views/user_maintenance.html
@@ -14,7 +14,12 @@
           />
         </div>
         <div class="form-group">
-          <select class="form-control" id="type" onchange="search(1)">
+          <select
+            class="form-control select2bs4"
+            id="type"
+            onchange="search(1)"
+            style="width: 100%"
+          >
             <option value="">Select type</option>
             {{each USER_TYPE}}
             <option value="{{$value}}">{{$value}}</option>
@@ -22,7 +27,12 @@
           </select>
         </div>
         <div class="form-group">
-          <select class="form-control" id="status" onchange="search(1)">
+          <select
+            class="form-control select2bs4"
+            id="status"
+            onchange="search(1)"
+            style="width: 100%"
+          >
             <option value="">Select status</option>
             {{each USER_STATUS}}
             <option value="{{$value}}">{{$value}}</option>
@@ -159,6 +169,9 @@
   }
 
   $(document).ready(function () {
+    $('.select2bs4').select2({
+      theme: 'bootstrap4',
+    });
     $('#pagination').html(pagination(page, totalPages, totalDocs, 'search'));
   });
 </script>
