--- a/templates/views/lead_management.html
+++ b/templates/views/lead_management.html
@@ -24,22 +24,45 @@
 
     <div class="card">
       <div class="card-body">
-        <input type='hidden' id='batch' name='batch'>
-        <div class="form-group">
-          <label>Search</label>
-          <input
-            type="search"
-            class="form-control"
-            id="search"
-            onsearch="search(1);"
-          />
-        </div>
 
         {{if (type == 'lead')}}
+          <input type='hidden' id='batch' name='batch'>
           <div class="form-group">
-            <label>Lead Status</label>
-            <select class="form-control" id="status" name="status" onchange="search(1);">
-              <option value="">Select Status</option>
+            <label>Search</label>
+            <input
+              type="search"
+              class="form-control"
+              placeholder="Name, first name, last name"
+              id="search"
+              onsearch="search(1);"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="search"
+              class="form-control"
+              placeholder="Job Title"
+              id="job"
+              onsearch="search(1);"
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="search"
+              class="form-control"
+              placeholder="Company"
+              id="company"
+              onsearch="search(1);"
+            />
+          </div>
+          <div class="form-group">
+            <select 
+              class="form-control" 
+              id="status" 
+              name="status" 
+              onchange="search(1);"
+            >
+              <option value="">Select status</option>
               {{each LEAD_STATUS}}
               <option value="{{$value}}">{{$value}}</option>
               {{/each}}
@@ -48,7 +71,7 @@
           
           <div class="form-group">
             <label>Option</label>
-            {{if batch}}
+            {{if search.batch}}
             <a href="/lead-management" class="btn bg-maroon btn-block">
               <i class="fas fa-eraser"></i>
               Clear Selected Batch
@@ -59,6 +82,16 @@
               Allocate
             </a>
           </div>
+        {{else}}
+          <div class="form-group">
+            <label>Upload Name</label>
+            <input
+              type="search"
+              class="form-control"
+              id="search"
+              onsearch="search(1);"
+            />
+          </div>  
         {{/if}}
       </div>
     </div>
@@ -86,6 +119,7 @@
                   <th>Job Title</th>
                   <th>Company</th>
                   <th>Mobile</th>
+                  <th>Action</th>
                 </tr>
               </thead>
               <tbody>
@@ -103,6 +137,9 @@
                   <td>{{$value.job_title}}</td>
                   <td>{{$value.company}}</td>
                   <td>{{$value.mobile}}</td>
+                  <td><a href="/lead-management/edit/{{$value.id}}" class="btn btn-sm bg-info mt-2">
+                    <i class="fas fa-user-edit"></i> Edit Lead
+                  </a></td>
                 </tr>
                 {{/each}}
               </tbody>
@@ -162,22 +199,32 @@
   const totalPages = parseInt('{{list.totalPages}}');
   const totalDocs = parseInt('{{list.totalDocs}}');
   document.getElementById('search').value = decodeHTML(
-    '{{search | escapeBackslash}}'
+    '{{search.search | escapeBackslash}}'
+  );
+  document.getElementById('job').value = decodeHTML(
+    '{{search.job | escapeBackslash}}'
   );
   document.getElementById('batch').value = decodeHTML(
-    '{{batch | escapeBackslash}}'
+    '{{search.batch | escapeBackslash}}'
   );
   document.getElementById('status').value = decodeHTML(
-    '{{status | escapeBackslash}}'
+    '{{search.status | escapeBackslash}}'
+  );
+  document.getElementById('company').value = decodeHTML(
+    '{{search.company | escapeBackslash}}'
   );
   
 
   function search(page) {
     let url = window.location.href.split('?')[0];
     let search = $('#search').val();
+    let job = $('#job').val();
     let status = $('#status').val();
+    let company = $('#company').val();
     url += `?page=${page}&type={{type}}`;
     if (search) url += `&search=${search}`;
+    if (job) url += `&job=${job}`;
+    if (company) url += `&company=${company}`;
     if (status) url += `&status=${status}`;
     window.location.href = url;
   }
