--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -36,6 +36,18 @@
         <!-- Add icons to the links using the .nav-icon class
              with font-awesome or any other icon font library -->
         <li class="nav-item">
+          <a href="/lead" class="nav-link">
+          <i class="nav-icon far fa-id-card"></i>
+            <p>Lead</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/calendar" class="nav-link">
+          <i class="nav-icon far fa-calendar"></i>
+            <p>Calendar</p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/bdm" class="nav-link">
             <i class="nav-icon far fa-user-circle"></i>
             <p>BDM</p>
