--- a/templates/views/lead_management_upload.html
+++ b/templates/views/lead_management_upload.html
@@ -2,31 +2,37 @@
 <div class="card">
   <div class="card-body">
     <form action="/lead-management/new_upload" method="post" enctype="multipart/form-data">
-    <div class="form-group">
-      <label>Upload Name</label>
-      <input
-        type="text"
-        class="form-control"
-        id="upload_name"
-        name="upload_name"
-        value="{{if body}}{{body.upload_name}}{{/if}}" 
-      />
-      <small id="upload_name_error" class="form-text text-danger"></small>
-    </div>
-    <div class="form-group">
-      <label for="file_input">File input</label>
-      <div class="input-group">
-        <div class="custom-file">
-          <input 
-            type="file" 
-            class="custom-file-input" 
-            id="file_input"
-            name="file_input">
-          <label class="custom-file-label" for="file_input">Choose file</label>
-        </div>
+      <div class="form-group">
+        <label>Upload Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="upload_name"
+          name="upload_name"
+          value="{{if body}}{{body.upload_name}}{{/if}}" 
+        />
+        <small id="upload_name_error" class="form-text text-danger"></small>
       </div>
-      <small id="file_input_error" class="form-text text-danger"></small>
-    </div>
+      <div class="form-group">
+        <label for="file_input">File input</label>
+        <div class="input-group">
+          <div class="custom-file">
+            <input 
+              type="file" 
+              class="custom-file-input" 
+              id="file_input"
+              name="file_input">
+            <label class="custom-file-label" for="file_input">Choose file</label>
+          </div>
+        </div>
+        <small id="file_input_error" class="form-text text-danger"></small>
+      </div>
+      <div class="form-group">
+        <a href="/app/cbi_template.csv" class="btn bg-olive btn-block">
+          <i class="fas fa-file-download"></i>
+          Download Template
+        </a>
+      </div>
       <div class="form-group">
         <button class="btn bg-info btn-block">
           <i class="fas fa-file-upload"></i> Upload
